# MyCMake

./: CMakeLists.txt  README.md  func.cpp  main.cpp  suite.cpp  test_framework.cpp
